--- a/doc/接口转发.md
+++ b/doc/接口转发.md
@@ -1,3 +1,7 @@
+### 接口来源
+ 
+(网易云音乐 Node.js API service)[https://github.com/Binaryify/NeteaseCloudMusicApi]， 下载后本地运行
+
 ### 浏览器跨域问题
 
 请求的API地址为: http://localhost:3000
