--- a/doc/移动样式适配问题.md
+++ b/doc/移动样式适配问题.md
@@ -20,6 +20,8 @@ build: {
 }
 ```
 
+- 不进行vw单位转换的方法，对应属性的单位PX代替px就不进行vw单位转换
+
 2. [postcss-aspect-ratio-mini](https://github.com/yisibl/postcss-aspect-ratio-mini)
 
 nuxt.config.js配置
