--- a/doc/播放器插件问题集.md
+++ b/doc/播放器插件问题集.md
@@ -19,6 +19,77 @@ audio.addEventListener("canplay", function(){
 })
 ```
 
+#### 缓存进度条问题, 有几种方法如下。 但当暂停时，因为buffered是不变，所以进度条是不会变的；而且播放的时候缓冲进度条和播放进度条相差无几， 很多时候出现重叠的时候，所以并没有凸显。
+
+1. timeupdate, 在当前播放位置改变时执行
+
+```
+ this.element.addEventListener('timeupdate', () => {
+    // timeupdate在当前播放位置改变时执行, 获取音频缓冲进度样式
+    if (this.element.readyState === 4) {
+      console.log(this.element.buffered.end(this.element.buffered.length - 1))
+      let bufferPer = Math.round(this.element.buffered.end(this.element.buffered.length - 1) / this.duration * 100) + '%'
+      document.querySelector('.play_process .playing-cache').style.width = bufferPer
+    }
+  })
+```
+
+2. suspend
+
+```
+this.element.addEventListener('suspend', () => {
+    // 获取音频缓冲进度样式
+    let timeRange = this.element.buffered
+    if (timeRange.length > 0 && this.element.duration > 0) {
+      let bufferPer = Math.round(this.element.buffered.end(0) / this.duration * 100) + '%'
+      document.querySelector('.play_process .playing-cache').style.width = bufferPer
+    }
+  })
+```
+
+3. setInterval
+
+```
+getBufferPer () {
+  // 不用
+  // 与timeupdate数据差别不大， 暂停this.element.buffered.end(0)会不变
+  let bufferInterval = setInterval(() => {
+    if (this.element.readyState === 4) {
+      let bufferPer = Math.round(this.element.buffered.end(0) / this.duration * 100) + '%'
+      document.querySelector('.play_process .playing-cache').style.width = bufferPer
+      if (this.element.buffered.end(0) === this.element.duration) {
+        clearInterval(bufferInterval)
+      }
+    }
+  }, 100)
+```
+
+但当我去PC网易云看，暂停进度条会一直走。且我拖放播放进度的时候，当缓冲条没有达到100%，缓冲进度又会从播放进度条那里开始走; 当缓冲达到100%， 拖动播放进条缓冲就不会动了。由于我没有找到好的方法，所以我想把缓冲做成一种假象
+
+```
+// 播放的时候调用这种方法
+getBufferPer () {
+    // 假缓冲
+    if (this.bufferPer >= 100 || this.bufferPer > 0) { return }
+    if (this.duration === 0) { return } // 音频时长
+    let count = 20 // 把总时间数分为N份加载
+    let each = Math.ceil(this.duration / count)
+    let eachPer = Math.round(each / this.duration * 100) // 1份占的百分比
+    let stime = 0
+    this.bufferInterval = setInterval(() => {
+      stime++
+      let per = eachPer * stime
+      this.bufferPer = per
+      document.querySelector('.play_process .playing-cache').style.width = `${per >= 100 ? 100 : per}%`
+      if (per >= 100) {
+        clearInterval(this.bufferInterval)
+      }
+    }, 1000)
+  }
+```
+
+期待有更好的方法
+
 
 参考：
 
