--- a/doc/播放器插件问题集.md
+++ b/doc/播放器插件问题集.md
@@ -64,7 +64,7 @@ getBufferPer () {
   }, 100)
 ```
 
-但当我去PC网易云看，暂停进度条会一直走。且我拖放播放进度的时候，当缓冲条没有达到100%，缓冲进度又会从播放进度条那里开始走; 当缓冲达到100%， 拖动播放进条缓冲就不会动了。由于我没有找到好的方法，所以我想把缓冲做成一种假象
+但当我去PC网易云看，暂停进度条会一直走。且我拖放播放进度的时候，当缓冲条没有达到100%，缓冲进度又会从播放进度条那里开始走; 当缓冲达到100%， 拖动播放进条缓冲就不会动了。在模拟2k网速，缓冲进度会因为慢而不动, 缓冲与播放处理的很好。由于我没有找到好的方法，所以我想把缓冲做成一种假象
 
 ```
 // 播放的时候调用这种方法
