--- a/doc/播放器插件问题集.md
+++ b/doc/播放器插件问题集.md
@@ -15,7 +15,7 @@ mounted () {
 
 ```
 audio.addEventListener("canplay", function(){
-  duration=parseInt(audio.duration)
+  this.duration = this.element.duration
 })
 ```
 
@@ -96,3 +96,86 @@ getBufferPer () {
 [ES6 class](http://caibaojian.com/es6/class.html)
 
 [HTML5之Audio音频标签学习](http://caibaojian.com/html5-audio.html)
+
+[HTML5 <Audio>标签API整理(一)](https://www.cnblogs.com/tianma3798/p/6033108.html)
+
+### 缓存进度条的实现（不用假缓冲）
+
+偶尔在mozilla看到一个案例[Media buffering, seeking, and time ranges](https://developer.mozilla.org/en-US/docs/Web/Guide/Audio_and_video_delivery/buffering_seeking_time_ranges)
+
+我对DEMO做了点修改，可以改播放地址直接运行
+
+```
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Buffering</title>
+  <style>
+  .buffered { 
+    height: 20px; 
+    position: relative;
+    background: #555;
+    width: 300px;
+  }
+
+  #buffered-amount {
+    display: block;
+    height: 100%;
+    background-color: #777;
+    width: 0;
+  }
+
+  .progress { 
+    margin-top: -20px;
+    height: 20px;  
+    position: relative;
+    width: 300px;
+  }
+
+  #progress-amount {
+    display: block;
+    height: 100%;
+    background-color: #595;
+    width: 0;
+  }
+  </style>
+</head>
+<body>
+<audio id="my-audio" preload controls>
+  <source src="http://m7.music.126.net/20200401144519/c254ea42b68ee28717bd59d6a09deaab/ymusic/7ca4/5b3f/cbd7/e6d8f390530d8d99c264f2094a1ad643.mp3">
+</audio>
+<div class="buffered">
+  <span id="buffered-amount"></span>
+</div>
+<div class="progress">
+  <span id="progress-amount"></span>
+</div>
+<script>
+  window.onload = function(){ 
+
+    var myAudio = document.getElementById('my-audio');
+
+    myAudio.addEventListener('progress', function() {
+      var bufferedEnd = myAudio.buffered.end(myAudio.buffered.length - 1);
+      var duration =  myAudio.duration;
+      console.log(duration)
+      if (duration > 0) {
+        document.getElementById('buffered-amount').style.width = ((bufferedEnd / duration)*100) + "%";
+      }
+    });
+
+    myAudio.addEventListener('timeupdate', function() {
+      var duration =  myAudio.duration;
+      var bufferedEnd = myAudio.buffered.end(myAudio.buffered.length - 1);
+      var duration =  myAudio.duration;
+      document.getElementById('buffered-amount').style.width = ((bufferedEnd / duration)*100) + "%";
+      if (duration > 0) {
+        document.getElementById('progress-amount').style.width = ((myAudio.currentTime / duration)*100) + "%";
+      }
+    });
+  }
+</script>
+</body>
+</html>
+```
