--- a/doc/播放器插件问题集.md
+++ b/doc/播放器插件问题集.md
@@ -142,6 +142,7 @@ getBufferPer () {
   </style>
 </head>
 <body>
+<!--注意加preload-->
 <audio id="my-audio" preload controls>
   <source src="http://m7.music.126.net/20200401144519/c254ea42b68ee28717bd59d6a09deaab/ymusic/7ca4/5b3f/cbd7/e6d8f390530d8d99c264f2094a1ad643.mp3">
 </audio>
@@ -159,7 +160,6 @@ getBufferPer () {
     myAudio.addEventListener('progress', function() {
       var bufferedEnd = myAudio.buffered.end(myAudio.buffered.length - 1);
       var duration =  myAudio.duration;
-      console.log(duration)
       if (duration > 0) {
         document.getElementById('buffered-amount').style.width = ((bufferedEnd / duration)*100) + "%";
       }
@@ -168,7 +168,6 @@ getBufferPer () {
     myAudio.addEventListener('timeupdate', function() {
       var duration =  myAudio.duration;
       var bufferedEnd = myAudio.buffered.end(myAudio.buffered.length - 1);
-      var duration =  myAudio.duration;
       document.getElementById('buffered-amount').style.width = ((bufferedEnd / duration)*100) + "%";
       if (duration > 0) {
         document.getElementById('progress-amount').style.width = ((myAudio.currentTime / duration)*100) + "%";
