--- a/doc/播放器插件问题集.md
+++ b/doc/播放器插件问题集.md
@@ -103,7 +103,7 @@ getBufferPer () {
 
 偶尔在mozilla看到一个案例[Media buffering, seeking, and time ranges](https://developer.mozilla.org/en-US/docs/Web/Guide/Audio_and_video_delivery/buffering_seeking_time_ranges)
 
-我对DEMO做了点修改，可以改播放地址直接运行
+我对DEMO做了点修改，可以改播放地址直接运行,注意当播放地址为url: '****.mp3'（接口返回type: 'mp3'）的时候，发现缓存到一定宽度后，且进度条还没播放到接近缓存条的时候，缓存条就不会走。而返回m4a却不会， 不知道为何）
 
 ```
 <!DOCTYPE html>
